# MicroViewerBackend

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  increment.sh  postgres example data.sql  schema_dump.sql
src/: main.cpp  queryService.cpp  queryService.hpp  requestHandler.cpp  requestHandler.hpp
src/handlers/: alivehandler.cpp  alivehandler.hpp
src/misc/: increment.hpp
